{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 12,
  "lineage": "2d270658-18f5-5072-07a5-a5b21991ce35",
  "resources": [
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:205930612901:instance/i-0d113dd912d8271eb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d113dd912d8271eb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f4f9732e7ac4e599"
              }
            ],
            "primary_network_interface_id": "eni-0f4f9732e7ac4e599",
            "private_dns": "ip-10-0-1-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_ip": "52.200.60.62",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd9a4dae9a0afe21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021392da5595f9cc0",
            "tags": {
              "Name": "task3-web-instance"
            },
            "tags_all": {
              "Name": "task3-web-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f30dafdec1237541"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "i-0d113dd912d8271eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_security_group.web_sg",
            "module.stack.aws_subnet.private",
            "module.stack.aws_subnet.public",
            "module.stack.aws_vpc.vpc",
            "module.stack.data.aws_ami.ubuntu_2204"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:internet-gateway/igw-0e73e40f74ff74163",
            "id": "igw-0e73e40f74ff74163",
            "owner_id": "205930612901",
            "region": "us-east-1",
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e73e40f74ff74163",
            "id": "r-rtb-0bb53223b4ef7c8351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bb53223b4ef7c835",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0bb53223b4ef7c835"
          },
          "dependencies": [
            "module.stack.aws_internet_gateway.igw",
            "module.stack.aws_route_table.public_rt",
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:route-table/rtb-0b95796d21a14b84b",
            "id": "rtb-0b95796d21a14b84b",
            "owner_id": "205930612901",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "rtb-0b95796d21a14b84b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:route-table/rtb-0bb53223b4ef7c835",
            "id": "rtb-0bb53223b4ef7c835",
            "owner_id": "205930612901",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "rtb-0bb53223b4ef7c835",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e63fde7c7d6e2766",
            "region": "us-east-1",
            "route_table_id": "rtb-0b95796d21a14b84b",
            "subnet_id": "subnet-0b39d53e5099a558c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.stack.aws_route_table.private_rt",
            "module.stack.aws_subnet.private",
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0068f15e24453126c",
            "region": "us-east-1",
            "route_table_id": "rtb-0bb53223b4ef7c835",
            "subnet_id": "subnet-021392da5595f9cc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.stack.aws_route_table.public_rt",
            "module.stack.aws_subnet.public",
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:security-group/sg-0f30dafdec1237541",
            "description": "Allow SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f30dafdec1237541",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "task3-web-sg",
            "name_prefix": "",
            "owner_id": "205930612901",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "sg-0f30dafdec1237541",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:subnet/subnet-0b39d53e5099a558c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b39d53e5099a558c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "205930612901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "subnet-0b39d53e5099a558c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:subnet/subnet-021392da5595f9cc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021392da5595f9cc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205930612901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-077d7c74f33b08c7b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "subnet-021392da5595f9cc0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stack.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stack",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205930612901:vpc/vpc-077d7c74f33b08c7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8459dc20fcd4c07",
            "default_route_table_id": "rtb-00753b49ef8eb8e91",
            "default_security_group_id": "sg-05ff050287f55e64c",
            "dhcp_options_id": "dopt-036370348dc4b1a4a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077d7c74f33b08c7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00753b49ef8eb8e91",
            "owner_id": "205930612901",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "205930612901",
            "id": "vpc-077d7c74f33b08c7b",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}